Exclude build artifacts, log files, package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /node_modules/
 NOTES
 typecad.json
+
+# Build Artifacts
+/dist/
+
+# Log files
+*.log
+
+# Node/npm generated junk
+package-lock.json
